# Planorama

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: docker-build.yml  ts-prettier.yml  validate-typescript.yml
aiService/: Dockerfile  pyproject.toml  request.rest
aiService/src/: __init__.py  algorithm.py  guest.py  relation.py  table.py
aiService/src/templates/: seating.html
backend-service/: Dockerfile  pom.xml
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/Services/: AbortableRequest.ts  HttpClient.ts
frontend/src/Utils/: AuthUtil.ts  Endpoints.tsx
frontend/src/contexts/: event-context.tsx
frontend/src/hooks/: use-event-by-guest.ts  use-event-listener.ts  use-fetch-all-guests.tsx  use-fetch-events-list.ts  use-form-auth.ts  use-login.ts  use-refresh.ts  useEventListener.ts  useFormAuth.ts  useGuestData.ts  useLogin.ts  useRefresh.ts
frontend/src/services/: abortable-request.ts  http-client.ts
frontend/src/types/: Element.ts  column.ts  event.ts  filter-operator.ts  gift.ts  guest-relation.ts  guest.ts  mantheme.ts  meal.ts  option-type.ts  relation.ts  rsvp-status.ts  schedule.ts  seating-preference.ts  strings.ts  task.ts  time-slot.ts  view-mode.ts
frontend/src/utils/: algorithem.ts  algorithm.ts  auth-utils.ts  colorUtils.ts  consts.ts  consts.tsx  end-points.tsx  filter-operator-functions.ts  gift-columns.ts  gift-utils.ts  guest-columns.ts  image-utils.ts  (+9 more)
reverse-proxy/: Dockerfile  nginx.conf
(+176 files in other folders)
